# QuEST

./: CMakeLists.txt  LICENCE.txt  README.md
.github/workflows/: compile.yml  test_free.yml  test_paid.yml
docs/: cmake.md  compile.md  launch.md  news.md  tutorial.md
examples/extended/: dynamics.c  dynamics.cpp
quest/include/: CMakeLists.txt  calculations.h  config.h.in  decoherence.h  deprecated.h  initialisations.h  modes.h  multiplication.h  operations.h  precision.h  quest.h  trotterisation.h  types.h
quest/src/api/: CMakeLists.txt  calculations.cpp  decoherence.cpp  environment.cpp  initialisations.cpp  matrices.cpp  multiplication.cpp  operations.cpp  paulis.cpp  qureg.cpp  trotterisation.cpp
quest/src/comm/: comm_config.cpp  comm_routines.cpp
quest/src/core/: CMakeLists.txt  accelerator.cpp  accelerator.hpp  autodeployer.cpp  envvars.cpp  envvars.hpp  errors.cpp  errors.hpp  localiser.cpp  localiser.hpp  memory.cpp  memory.hpp  parser.cpp  parser.hpp  paulilogic.cpp  paulilogic.hpp  printer.cpp  utilities.cpp  utilities.hpp  validation.cpp  validation.hpp
quest/src/cpu/: cpu_config.cpp  cpu_config.hpp  cpu_subroutines.cpp  cpu_subroutines.hpp
quest/src/gpu/: gpu_config.cpp  gpu_config.hpp  gpu_cuquantum.cuh  gpu_kernels.cuh  gpu_subroutines.cpp  gpu_subroutines.hpp  gpu_thrust.cuh  gpu_types.cuh
tests/: CMakeLists.txt  main.cpp
tests/deprecated/: CMakeLists.txt  test_calculations.cpp  test_data_structures.cpp  test_decoherence.cpp  test_gates.cpp  test_main.cpp  test_operators.cpp  test_state_initialisations.cpp  test_unitaries.cpp  test_utilities.cpp
tests/unit/: CMakeLists.txt  calculations.cpp  decoherence.cpp  initialisations.cpp  matrices.cpp  multiplication.cpp  operations.cpp  paulis.cpp  trotterisation.cpp
tests/utils/: CMakeLists.txt  cache.cpp  config.cpp  config.hpp  convert.cpp  evolve.cpp  evolve.hpp  lists.cpp  macros.hpp
utils/docs/: Doxyfile
utils/docs/latex/: commands.tex
utils/scripts/: compile.sh
